Probando la terminal desde el nuevo computador

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Barra de navegación -->
     <nav class="navbar navbar-light bg-light d-flex justify-content-center">
         <img src="https://image.flaticon.com/icons/png/512/2909/2909934.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        <span class="title">TALLER DE<span class="git"> GIT </span>Y GITHUB</span>
+        <span class="title">TALLER DE<span class="git"> GIT </span>Y GITHUB #6</span>
     </nav>
 
     <!-- Cartas de StarWars -->
