Agregando nuevos participantes
Lo estoy haciendo con las llaves ssh

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
         <li>Edu</li>
         <li>Santiago</li>
         <li>Vicky</li>
+        <li>Rene</li>
+        <li>Dani</li>
       </ul>
     </div>
 
